# soeji

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: build.yaml
backend/: Dockerfile  Dockerfile.migrate  package.json
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/config/: passport.ts
backend/src/middleware/: auth.ts  csrf.ts  roleGuard.ts
backend/src/routes/: auth.ts  images.ts  search.ts  stats.ts  tags.ts  totp.ts  upload.ts  users.ts
backend/src/scripts/: reindex.ts  reindexTags.ts
backend/src/services/: database.ts  jwt.ts  (+8 more)
browser-extension/: README.md  manifest.json  package.json
browser-extension/content-scripts/: upload.css  upload.js
cdn/: nginx.conf
cdn/templates/: default.conf.template
converter/: Cargo.toml  Dockerfile  config.go  converter.go  errors.go  go.mod  go.sum  handlers.go  main.go  s3.go
converter/src/: config.rs  error.rs  main.rs
converter/src/handlers/: image.rs  mod.rs  root.rs
converter/src/services/: converter.rs  mod.rs  s3.rs
frontend/: Dockerfile  generate-icons.mjs  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
prisma/: schema.prisma
service/: Dockerfile  Dockerfile.migrate  package.json
service/prisma/: schema.prisma
service/src/: index.ts
src/services/: database.ts  imageProcessor.ts  meilisearchClient.ts  pngReader.ts  watcher.ts
watcher/: Dockerfile  package.json
watcher/src/: index.ts
(+72 files in other folders)
