[package]
name = "soeji-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP Server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# S3 Client (lightweight alternative)
rust-s3 = { version = "0.34", default-features = false, features = ["tokio-rustls-tls"] }

# Image Processing
image = "0.24"
webp = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
bytes = "1"

[profile.release]
lto = false
strip = true
opt-level = 3
